objects/SCP_Certa_GC__Area_de_trabajo__c.object
<CustomObject>
    <fields>
        <fullName>SCP_Certa_GC__Conocimiento_del_Area__c</fullName>
        <label>Conocimiento del Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alto</fullName>
                </value>
                <value>
                    <fullName>Medio</fullName>
                </value>
                <value>
                    <fullName>Bajo</fullName>
                </value>
                <value>
                    <fullName>Aún no tengo contacto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Cuenta__c</fullName>
        <label>Cuenta</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Areas de trabajo</relationshipLabel>
        <relationshipName>Areas_de_trabajo</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Tipo_de_Area__c</fullName>
        <label>Tipo de Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Comunicaciones</fullName>
                </value>
                <value>
                    <fullName>Sistemas</fullName>
                </value>
                <value>
                    <fullName>Seguridad</fullName>
                </value>
                <value>
                    <fullName>Digitalización</fullName>
                </value>
                <value>
                    <fullName>Transformación</fullName>
                </value>
                <value>
                    <fullName>Financiera</fullName>
                </value>
                <value>
                    <fullName>Área de Negocio</fullName>
                </value>
                <value>
                    <fullName>RRHH</fullName>
                </value>
                <value>
                    <fullName>Bienes e Inmuebles</fullName>
                </value>
                <value>
                    <fullName>Áreas Corporativas</fullName>
                </value>
                <value>
                    <fullName>Producción</fullName>
                </value>
                <value>
                    <fullName>Ninguna de las anteriores</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Titulo_Area__c</fullName>
        <label>Titulo Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Area de trabajo</label>
    <nameField>
        <label>Nombre de Area</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Areas de trabajo</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>